@@ -1,5 +1,10 @@
 2002-09-12  Keisuke Nishida  <knishida@netlab.jp>
 
+	* numeric.h (cob_decimal): Use exponent instead of decimals.
+	* numeric.c: Related functions updated.
+	
+2002-09-12  Keisuke Nishida  <knishida@netlab.jp>
+
 	* fileio.c (sequential_open): Set f->file.fd to 0 on error.
 
 2002-09-06  Keisuke Nishida  <knishida@netlab.jp>
